Added pHr->initialise, pAr->initialise, pHr->key_values; changelog

--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Test-Proto
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.01    2012-03-29
+        First commit: proof of concept
 
