--- a/README
+++ b/README
@@ -4,8 +4,10 @@ This module simplifies writing tests for deep structures and objects.
 
     use Test::Proto;
 	
-    pAr	->contains_only('', pHr)
-		->ok(["", {a=>'b'}], "This arrayref contains an empty string followed by a hashref");
+    pAr	->contains_only('', pHr,
+			"ArrayRef must contain only an empty string followed by a hashref")
+		->ok(["", {a=>'b'}]);
+
 
 	pSt	->is_like(qr/^\d+$/, 'looks like a positive integer')
 		->is_unlike(qr/^0\d+$/, 'no leading zeros')
