--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Test-Proto
 
-0.01    2012-03-29
-        First commit: proof of concept
+0.010	2012-06-12
+		First release: Hopefully ready for CPAN!
+		This first release is a usable version of Test::Proto. The main components will be functional enough to write reasonably complex tests for native data structures, run method calls on objects, and execute arbitrary code within the framework. Failure and Exception behaviour is not thoroughly tested. There will no doubt be some API changes later on.
+
+0.001	2012-03-29
+		First commit: proof of concept
 
