--- a/README
+++ b/README
@@ -2,22 +2,26 @@ Test-Proto
 
 This module simplifies writing tests for deep structures and objects.
 
-	use Test::Proto;
+	use Test::Proto qw(p pArray pHash pObject pSeries);
 	
-	pAr	->contains_only('', pHr,
+	pArray	->contains_only(pSeries('', pHash), 
 			"ArrayRef must contain only an empty string followed by a hashref")
 		->ok(["", {a=>'b'}]);
+		# provides diagnostics, including subtests as TAP, using Test::Builder
 	
-	pSt	->is_like(qr/^\d+$/, 'looks like a positive integer')
-		->is_unlike(qr/^0\d+$/, 'no leading zeros')
-		->ok('123');
+	p	->like(qr/^\d+$/, 'looks like a positive integer')
+		->unlike(qr/^0\d+$/, 'no leading zeros')
+		->validate('123');
+		# returns an object with a true value
 	
-	pOb	->is_a('XML::LibXML::Node', 'must inherit from XML::LibXML::Node')
+	pObject	->is_a('XML::LibXML::Node', 'must inherit from XML::LibXML::Node')
 		->is_a('XML::LibXML::Element', 'what it really is')
-		->can_do('findnodes', 'must have the findnodes method')
-		->try_can('localName', [], 'li')
+		->method_exists('findnodes', 'must have the findnodes method')
+		->method_scalar_context('localName', [], 
+			p->like(qr/blockquote|li|p/, 'We can add normal text here')
+		)
 		->ok(XML::LibXML::Element->new('li'));
-
+		# have a look at the nested prototype in try_can
 
 The idea behind Test::Proto is that test scripts for code written on modern, OO principles should themselves resemble the target code rather than sequential code. 
 
