--- a/Changes
+++ b/Changes
@@ -2,7 +2,9 @@ Revision history for Test-Proto
 
 Unreleased changes
 		Bug in clone method fixed
+		ref now takes a prototype, as per docs
 		Added methods blessed, array, hash, object, scalar, scalar_ref
+		TestCase attributes are now chainable
 		Small documentation fixes
 
 0.022	2013-09-13
