--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Test-Proto
 
 Unreleased changes
+		Fixed gh # 42 (using Formatter on validate results)
 
 0.024	2013-10-02
 		Bug causing install fail on 5.16+ fixed (use of defined on array)
