--- a/Changes
+++ b/Changes
@@ -1,12 +1,15 @@
 Revision history for Test-Proto
 
 Unreleased changes
+		Added ':all' import option: use Test::Proto ':all';
+		All .pm files now "use 5.008;" and not 5.006
+		Some docs fixes
 
 0.026	2013-11-29
 		Fixed gh #39 (type checking for pArray etc.)
 
 0.025	2013-10-07
-		Fixed gh # 42 (using Formatter on validate results)
+		Fixed gh #42 (using Formatter on validate results)
 
 0.024	2013-10-02
 		Bug causing install fail on 5.16+ fixed (use of defined on array)
